--- a/src/deno.json
+++ b/src/deno.json
@@ -8,6 +8,10 @@
 		"preserveConstEnums": true,
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
-		"emitDecoratorMetadata": true
+		"emitDecoratorMetadata": true,
+		"lib": [
+			"dom",
+			"esnext"
+		]
 	}
 }
