Add suport for master named branches

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ build-docker:
       --destination "${CI_REGISTRY_IMAGE}/deployment"
   only:
     - main
+    - master
 
 deploy-staging:
   stage: deploy
@@ -34,3 +35,4 @@ deploy-staging:
     - docker-compose --env-file ./deployment/.env -f deployment/docker-compose.yml up -d 
   only:
     - main
+    - master
