Update to latest deno version

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,6 +23,6 @@
 
     "remoteEnv": {
 		// ${localEnv:UserName}: windows  ${localEnv:USER} : linux
-        "ENDPOINT": "@test.dev_${localEnv:UserName}${localEnv:USER}"
+        "ENDPOINT": "@${localEnv:UserName}${localEnv:USER}.uix-base-project"
     }
 }
