--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,16 +7,15 @@
 			"type": "node",
 			"program": "https://cdn.unyt.org/uix/run.ts",
 			"cwd": "${workspaceFolder}",
-			"runtimeExecutable": "/deno/v1.21.3/bin/deno",
+			"runtimeExecutable": "/deno/latest/bin/deno",
 			"runtimeArgs": [
 				"run",
-				"--unstable",
 				"--no-check", "--importmap", "importmap.dev.json",
 				"--allow-all"
 			],
 			"attachSimplePort": 9229,
 			"args": [
-				"--live"
+				"--watch"
 			],
 			"console": "integratedTerminal"
 		}
