--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "2"
 
 services:
-  DATEX-PLAYGROUND:
+  TESTAPP:
   
     container_name: ${UNYT_NAME}
-    image: denoland/deno
+    image: registry.git.unyt.org/unyt/code/templates/uix-templates/uix-base-project/deployment
 
     ports:
       - ${UNYT_INTERNAL_PORT}:80
@@ -12,9 +12,6 @@ services:
       - ${UNYT_INTERNAL_PORT}
     networks:
       - main
-    working_dir: /app
-    volumes:
-      - ../:/app
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${UNYT_NAME}.rule=Host(`${UNYT_HOST}`)"
@@ -24,14 +21,7 @@ services:
       - "traefik.http.routers.${UNYT_NAME}-secured.rule=Host(`${UNYT_HOST}`)"
       - "traefik.http.routers.${UNYT_NAME}-secured.tls=true"
       - "traefik.http.routers.${UNYT_NAME}-secured.tls.certresolver=myhttpchallenge"
-    command: 
-      - /bin/sh
-      - -c
-      - |
-          rm deno.lock
-          deno cache --reload -q ./backend/entrypoint.ts
-          deno run -A -q https://dev.cdn.unyt.org/uix/run.ts --reload -w -v
-    restart: on-failure
+
 
 networks:
   main:
