--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,16 @@
 {
-    "name": "Deno",
+    "name": "UIX project",
     "dockerFile": "Dockerfile",
     "customizations": {
         "vscode": {
             "settings": {
                 "terminal.integrated.shell.linux": "/bin/bash"
             },
-            "extensions": ["denoland.vscode-deno"]
+            "extensions": ["denoland.vscode-deno", "unytorg.datex-workbench"]
         }
     },
     "remoteUser": "vscode",
     "remoteEnv": {
-        "PATH": "${containerEnv:PATH}:/home/vscode/.deno",
-        "ENDPOINT": "@${localEnv:UserName}${localEnv:USER}.uix-base-project"
+        "PATH": "${containerEnv:PATH}:/home/vscode/.uix/bin"
     }
 }
